src/messenger/webim/styles/simplicity/chat.css
BODY {
	margin: 0px;
	font-family: Verdana, Arial, Helvetica, sans-serif;
	font-size: 10px;
	background: #FFFFFF;
	color: #666666;
}

FORM {
	margin-bottom: 0px;
	margin-top: 0px;
}

TABLE {
	font-family: Verdana, Arial, Helvetica, sans-serif;
	font-size: 11px;
	color: #666666;
}

A, A:active, A:link, A:visited {
	text-decoration: none;
	color: #BB0000;
}

A:hover {
	text-decoration: underline;
	color: #BB0000;
}

H1 {
	margin-top: 0px;
	margin-bottom: 5px;
	font-family: Arial, Helvetica, sans-serif;
	font-size: 16px;
	color: #000000;
	font-weight: bold;
}

H2 {
	margin-top: 0px;
	margin-bottom: 0px;
	font-family: Arial, Helvetica, sans-serif;
	font-size: 14px;
	color: #000000;
	font-weight: bold;
}

H3 {
	margin-top: 0px;
	margin-bottom: 0px;
	font-family: Arial, Helvetica, sans-serif;
	font-size: 12px;
	color: #000000;
	font-weight: bold;
}

UL {
	margin-top: 0px;
	margin-bottom: 0px;
}

#greybg {
	background: #EFEFEF;
}

#whitebg {
	background: #FFFFFF;
}

#toolbar {
	background: #E3E3E3 url('images/toolbar_bg.jpg') repeat-x;
	border-bottom: solid 1px #CCCCCC;
}

#typingdiv, #engineinfo {
	font-family: Verdana, Arial, Helvetica, sans-serif;
	font-size: 11px;
	color: #BB0000;
	margin: 0px 3px;
}

.chathistory {
	width: 100%;
	height: 300px;
	border: solid 1px #CCCCCC;
	overflow:auto;
}

TEXTAREA.message {
	margin: 0px;
	border: solid 1px #CCCCCC;
	padding: 0px 3px;
	width: 100%;
	height: 50px;
	overflow: auto;
}

.message {
	font-family: Arial, Helvetica, sans-serif;
	font-size: 11px;
	color: #666666;
	padding: 3px;
	line-height: 15px;
}

.message span.time {
	color: #000000;
}

.message span.nuser {
	color: #B11E23;
	font-weight: bold;
}

.message span.nagent {
	font-weight: bold;
}

.message span.minf {
	color: #1E48B1;
	font-size: 11px;
}

.message span.mevent {
	color: #A1A1A1;
	font-size: 11px;
}

.message span.mhidden {
	color: #A1A1A1;
	font-size: 11px;
}

.message span.mconn {
	color: #A1A1A1;
	font-size: 11px;
}

.submit {
	padding-top: 1px;
}

.text {
	font-family: Verdana, Arial, Helvetica, sans-serif;
	font-size: 11px;
	color: #4C4C4C;
}

.text span.grey {
	color: #666666;
}

#form {
	width: 100%;
	background: #EFEFEF;
	border: solid 1px #CCCCCC;
}

#form TD.text {
	width: 1%;
	white-space: nowrap;
}

#errorimage {
	margin-right: 5px;
}

.field {
	border: 1px solid #CCCCCC;
	font-family: Arial, Helvetica, sans-serif;
	font-size: 11px;
	color: #666666;
	padding-left: 3px;
}

textarea.field {
	margin: 0px;
	padding: 0px 3px;
	overflow: auto;
}

.dropdown {
	font-family: Arial, Helvetica, sans-serif;
	font-size: 11px;
	color: #666666;
}

.button A {
	font-family: Arial, Helvetica, sans-serif;
	font-size: 11px;
	color: #666666;
}

#footer {
  text-align: center;
  font-size: 10px;
  color: #999999;
}

#footer A {
	color: #999999;
	text-decoration: underline;
}

